implement buy button

--- a/sections/custom-featured.liquid
+++ b/sections/custom-featured.liquid
@@ -1,5 +1,7 @@
 {{ 'custom-featured.css' | asset_url | stylesheet_tag }}
 {{ 'custom-card.css' | asset_url | stylesheet_tag }}
+{{ 'custom-buy-button.css' | asset_url | stylesheet_tag }}
+
 
 
 {% assign disco_collection = collections['disco'] %}
