--- a/snippets/custom-card.liquid
+++ b/snippets/custom-card.liquid
@@ -10,5 +10,6 @@
 
   <div class="custom-card__content">
     <div class="custom-card__title">{{ title }}</div>
+    {% render 'custom-buy-button', price: price %}
   </div>
 </div>
