Implemented responsive layout

--- a/assets/custom-card.css
+++ b/assets/custom-card.css
@@ -28,3 +28,14 @@
   line-height: 42px;
   text-align: center;
 }
+
+@media (mxin-width: 900px) {
+  .custom-card {
+    max-width: 450px;
+  }
+}
+@media (min-width: 1360px) {
+  .custom-card {
+    max-width: 520px;
+  }
+}
