--- a/assets/custom-featured.css
+++ b/assets/custom-featured.css
@@ -21,3 +21,23 @@
   text-align: center;
   margin-bottom: 30px;
 }
+
+@media (min-width: 900px) {
+  .custom-featured__content {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 140px 30px;
+    column-gap: 40px;
+    row-gap: 120px;
+    justify-content: center;
+  }
+  .custom-featured__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+@media (min-width: 1360px) {
+  .custom-featured__title {
+    font-size: 42px;
+    line-height: 42px;
+  }
+}
