--- a/snippets/custom-card.liquid
+++ b/snippets/custom-card.liquid
@@ -1,4 +1,4 @@
-<div class="custom-card">
+<div class="custom-card" data-product-id="{{ product.id }}">
   <div class="custom-card__image">
     <img
       src="{{ product.featured_image | image_url }}"
